fetch root metadata
