# internal/api/routes.go
@@ -16,6 +16,7 @@ func RegisterRoutes(r *chi.Mux, as services.ArtifactService, rs services.RekorSe
 	r.Get("/api/v1/rekor/entries/{uuid}", handler.GetApiV1RekorEntriesUuid)
 	r.Get("/api/v1/rekor/public-key", handler.GetApiV1RekorPublicKey)
 	r.Get("/api/v1/trust/config", handler.GetApiV1TrustConfig)
+	r.Get("/api/v1/trust/root-metadata", handler.GetApiV1TrustRootMetadata)
 	r.Get("/swagger-ui", handler.ServeSwaggerUI)
 	r.Get("/rhtas-console.yaml", handler.ServeOpenAPIFile)
 }
